--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,14 @@
 name: cudaml
 channels:
-  - pytorch
-  - nvidia
-  - conda-forge
+  - defaults
   - anaconda
+  - conda-forge
 dependencies:
-  - pytorch-cuda=11.8
+  - python=3.9
+  - numpy
+  - pandas
+  - pip
   - pip:
-      - streamlit==1.27.2
+      - streamlit
+      
 
