--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 numpy == 1.26.0
 pandas == 2.1.1
 matplotlib ==  3.8.0
-torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
+pytorch==2.0.1 
+torchvision==0.15.2 
+torchaudio==2.0.2 
+pytorch-cuda=11.8
