--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 numpy == 1.26.0
 pandas == 2.1.1
 matplotlib ==  3.8.0
-pytorch==2.0.1 
-torchvision==0.15.2 
-torchaudio==2.0.2 
+pytorch>2.0
+torchvision>0.15
+torchaudio>2.0
 
